After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657080 - aacparse: failing test due to two buffers being dropped for one sync loss
aacparse: failing test due to two buffers being dropped for one sync loss
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-22 14:18 UTC by Vincent Penquerc'h
Modified: 2011-08-24 06:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
aacparse: only require two frames in a row when we do not have sync (1.42 KB, patch)
2011-08-23 11:17 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-08-22 14:18:39 UTC
The aacparse test tries to feed a garbage frame in the middle of valid frames, and expects to receive an output buffer for each valid input buffer.

The aacparse element wants two frames in a row to acquire sync, and ends up rejecting a valid frame, causing the aacparse test to come up one buffer short.

Disabling the "need second buffer" test in aacparse causes the test to be happy.

The straightforward fix would be to change the test to know it should expect one less buffer, but I'm wondering whether it's best to keep track in the aacparse element whehter we found sync once before, and, if so, resync on a single frame.
This would mean a bit error would drop only the corrupt frame, and not a valid one as well.
Comment 1 Vincent Penquerc'h 2011-08-23 11:17:43 UTC
Created attachment 194473 [details] [review]
aacparse: only require two frames in a row when we do not have sync

This avoids a single bit error dropping two frames unnecessarily.
The two consecutive frames check is still required when we don't
have sync.
Comment 2 Sebastian Dröge (slomo) 2011-08-24 06:26:54 UTC
commit f3fc3e1f69587e1bda5e628093918a2a3dd5f874
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Tue Aug 23 12:12:15 2011 +0100

    aacparse: only require two frames in a row when we do not have sync
    
    This avoids a single bit error dropping two frames unnecessarily.
    The two consecutive frames check is still required when we don't
    have sync.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657080